--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body {
     background-color: #131313;
 }
 
-* {
-    font-family: 'Nunito Sans', sans-serif;
-    font-family: 'Yeseva One', serif;
+button,
+.slider__title,
+.slider__dot {
+    cursor: pointer;
 }
 
 .main {
